<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:actionBarNavMode="tabs"
    >

    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textColor="@color/colorPrimaryDark"
        style="@style/NameStyle" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/button_text"
        android:textColor="#ffffff"
        android:background="@drawable/button_shape"
        />

    <TextView
        android:id="@+id/nicknameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/NameStyle"
        android:visibility="gone"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:contentDescription="@string/yellow_star"
        />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/bio"
            style="@style/BioStyle">

        </TextView>

    </ScrollView>


</LinearLayout>